--- a/ShinekShop/ShinekShopWeb.csproj
+++ b/ShinekShop/ShinekShopWeb.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShinekShopInfrastructure\ShinekShopInfrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
