--- a/ShinekShop/appsettings.json
+++ b/ShinekShop/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ShopConnectionString": "data source=SABA;initial catalog=ShinekShopDB;integrated security=true;TrustServerCertificate=True;"
+
+  }
 }
