--- a/ShinekShopApplication/ShinekShopApplication.csproj
+++ b/ShinekShopApplication/ShinekShopApplication.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Implementions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShinekShopInfrastructure\ShinekShopInfrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
